[project]
name = "moon-d1-mcp"
version = "0.1.0"
description = "MCP server for Cloudflare D1 Selenography database - lunar surface features"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
moon-d1-mcp = "server:mcp.run"
