[project]
name = "moon-d1-mcp"
version = "0.1.0"
description = "MCP server for Cloudflare D1 Selenography database - lunar surface features"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.4,<4",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "py-key-value-aio[redis]>=0.2.0",
    "cryptography>=42.0.0",
]

[project.scripts]
moon-d1-mcp = "server:mcp.run"
